Configure mercurial with default username and email address
Signed-off-by: Andreas Fleig <afleig@pivotal.io>

--- a/hg/Dockerfile
+++ b/hg/Dockerfile
@@ -6,4 +6,6 @@ ADD             bashrc /root/.bashrc
 ENV             HOME /root
 ENV             ENV $HOME/.bashrc
 
+ADD             hgrc /etc/mercurial/hgrc
+
 CMD             ["/bin/sh"]
